# cmclient

./: .changelog  .clang-format  .diff-exclude  .gitignore  .hgignore  .ottdrev  .release_date  .version  CMakeLists.txt  COMPILING.md  Doxyfile  Makefile  Makefile.am  Makefile.bundle.in  Makefile.grf.in  Makefile.in  Makefile.lang.in  Makefile.msvc  Makefile.setting.in  Makefile.src.in  azure-pipelines.yml  build-number.txt  check_diff.sh  cm_changelog.txt  cmake-ninja-clang-release.sh  cmclient.sublime-project  config.cache  config.cache.pwd  config.lib  configure  findversion.sh  gen_commands.py  gen_newgrf_revisions.py  make_diff.sh  nova_changelog.txt  rebase-check.sh  release.sh  source.list  update.sh  vcpkg.json
.github/: unused-strings.py
cmake/: CompileFlags.cmake  InstallAndPackage.cmake  Options.cmake
grf/: cmclient.nml  recolourgen.py
media/: openttd.desktop  openttd.desktop.in  openttd.desktop.translation.awk
projects/: generate  (+21 more)
src/citymania/: CMakeLists.txt  base64.h  cm_base64.cpp  cm_base64.hpp  cm_bitstream.cpp  cm_bitstream.hpp  cm_blueprint.cpp  cm_blueprint.hpp  cm_cargo_table_gui.cpp  cm_cargo_table_gui.hpp  cm_client_list_gui.cpp  cm_client_list_gui.hpp  cm_colour.cpp  cm_colour.hpp  cm_command_log.cpp  cm_command_log.hpp  cm_command_type.hpp  cm_commands.cpp  cm_commands.hpp  cm_commands_gui.cpp  cm_commands_gui.hpp  cm_console_cmds.cpp  cm_console_cmds.hpp  cm_event.hpp  cm_export.cpp  cm_export.hpp  cm_game.cpp  cm_game.hpp  cm_highlight.cpp  cm_highlight.hpp  cm_highlight_type.hpp  cm_hotkeys.cpp  cm_hotkeys.hpp  cm_identity_gui.cpp  cm_identity_gui.hpp  cm_locations.cpp  cm_locations.hpp  cm_main.cpp  cm_main.hpp  cm_minimap.cpp  (+42 more)
src/citymania/extensions/: CMakeLists.txt  cmext_commandcost.hpp  cmext_company.hpp  cmext_game_session_stats.hpp  cmext_town.hpp
(+1373 files in other folders)
